# chungsim

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY_JEMINAI3_INSTRUCTIONS.md  README.md  app.py  hallucination_detection.py  requirements.txt  streamlit_app.py  test_hallucination.py  test_integration.py  test_parser.py  test_revision.py
.streamlit/: config.toml
civil_engineering/: __init__.py  dashboard.py  data_parser.py  rag_system.py
data/: parsed_complexes.json
docs/: SECURITY_INCIDENT_RESPONSE.md  UPGRADE_INSTRUCTIONS.md  UPGRADE_REPORT.md  claude_code_prompt.md
files/: CLI_INSTRUCTIONS.md  QUICK_CHECKLIST.md  development_instructions.md
govable_ai/: config.py  export.py  main.py
llm_ready_docs/: 0007-7-2도시도로팀-이원국 도로구조시설기준.xls.md  10.11. 철도교통팀- 서정수 철도보호지구의 이해와 실무.hwpx.md  11.12. 철도교통팀-회전교차로설치공사 실무요령(24.11.21.)_시설7급 홍기철.pptx.md  12. 차량민원과 백승혁 공영주차장 설계 기준(2024).hwp.md  13.14-1.호수자원개발-곽병문, 충주호 문화예술 리트리트 조성사업.hwp.md  14.15-2호수자원개발-곽병문, 호암지 수질개선 및 생태관광명소화사업(음악분수).hwp.md  15.15-1. 산악관광개발팀-이정민, 심항산 사업계획(요약).hwp.md  16.17-2 산악관광개발팀 이정민, 금가 달숯정원 사업개요_241120.hwp.md  17.18.하천시설팀-이창섭, 2024년 재해발생 시 하천,소하천 현장조사 추진방안.pptx.md  18.20.상수도과-김준영, 급수공사의 이해와 실무요령.pptx.md  19.21.하수과 하수시설1팀 이회성하수도 설계기준 교육자료 (1).hwp.md  2-2.산단조성팀-산업단지 추진현황_토목회 교육자료.pdf.md  20.[돌덩이] 개발업무 매뉴얼(길잡이)_20241125(수정중1).pdf.md  3-4.도시계획팀-이경우 도시계획제도20240205_도시계획과_도시계획시설수정.hwp.md  4-5.지구단위팀-조경욱 지구단위계획제도 요약(국토교통부).pdf.md  6-7-1.도시도로팀-이원국 도시지역도로_설계지침_제정(국토교통부_훈령_제1266호).hwp.md  (+4 more)
streamlit_page_registry/: .gitignore  CHANGELOG.md  LICENSE  PR_BODY.md  README.md  pyproject.toml
streamlit_page_registry/examples/: basic_app.py
streamlit_page_registry/examples/pages/: about.py  broken.py  data.py  home.py  reports.py  settings.py
streamlit_page_registry/src/streamlit_page_registry/: __init__.py  dispatch.py  errors.py  models.py  registry.py
streamlit_page_registry/tests/: test_registry.py
(+40 files in other folders)
